# fprynt

./: CMakeLists.txt  README.markdown  example.py  lib_fprynt.cc
fprynt/: __init__.py
